fix: too small title section on small devices #39

--- a/src/app/pages/bes2/activities/bes2-activities.component.scss
+++ b/src/app/pages/bes2/activities/bes2-activities.component.scss
@@ -37,6 +37,16 @@ $toolbar-height: 64px;
   padding: 0 0 16px !important;
 }
 
+.heading {
+  height: 124px;
+}
+
+@media #{sizes.$breakpoint-small} {
+  .heading {
+    height: 172px;
+  }
+}
+
 .drawer-container {
   height: calc(100vh - 64px);
 }
